# GroveScan

./: .gitignore  LICENSE.txt  README.md  README.txt  build.py  data_setup.py  default_settings.json  installer.iss  main.py  pyproject.toml  test_import.py  version_info.txt
src/controllers/: app_controller.py  document_controller.py  export_controller.py  export_template_manager.py  page_assignment_controller.py  profile_controller.py  scan_controller.py
src/models/: __init__.py  document_batch.py  dynamic_index_schema.py  index_field.py  page_assignment.py  scan_profile.py  scanned_page.py  scanner_interface.py
src/utils/: error_handling.py  help_hints.py  help_system.py  performance_monitor.py  settings_manager.py
src/views/: app_controller.py  document_grid_view.py  dynamic_index_editor.py  enhanced_export_dialog.py  export_dialog.py  index_field_widget.py  main_window.py  page_assignment_view.py  profile_dialog.py  scanner_control_view.py  settings_dialog.py  workflow_widget.py
